--- a/JewelryAuctionSystem/src/main/resources/application.properties
+++ b/JewelryAuctionSystem/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=12345
-spring.datasource.url=jdbc:mysql://localhost:3306/jewelryAuction
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/jewelryauction
+spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.format_sql=true
 spring.jpa.show-sql=true
