--- a/JewelryAuctionSystem/pom.xml
+++ b/JewelryAuctionSystem/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.38.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
