--- a/UserUI/package.json
+++ b/UserUI/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
+    "@tabler/icons": "^3.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@vitejs/plugin-react": "^4.3.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
@@ -44,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.0",
     "vite": "^5.2.12"
   }
 }
