--- a/JewelryAuctionSystem/pom.xml
+++ b/JewelryAuctionSystem/pom.xml
@@ -42,6 +42,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>9.30.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
