--- a/ManagerUI/package.json
+++ b/ManagerUI/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.3.1"
   }
