--- a/ManagerUI/package.json
+++ b/ManagerUI/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^0.7.1",
