--- a/ManagerUI/package.json
+++ b/ManagerUI/package.json
@@ -20,9 +20,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4"
