--- a/ManagerUI/package.json
+++ b/ManagerUI/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "file-saver": "^2.0.5",
     "howler": "^2.2.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -28,7 +29,8 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "vite",
