--- a/ManagerUI/package.json
+++ b/ManagerUI/package.json
@@ -16,7 +16,9 @@
     "chart.js": "^4.4.3",
     "file-saver": "^2.0.5",
     "howler": "^2.2.4",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
+    "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
@@ -28,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sass": "^1.77.4",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
