--- a/JewelryAuctionSystem/.azure/default/.env
+++ b/JewelryAuctionSystem/.azure/default/.env
@@ -6,3 +6,10 @@ AZURE_MYSQL_SUBSCRIPTION_ID="c8deb86b-a371-4b7e-a3d7-43b71f9f28f2"
 AZURE_MYSQL_PASSWORD="Huy@0703"
 AZURE_MYSQL_USERNAME="root_jewelry_auction_system"
 
+# connection.id=112dcfc4-00c0-4bd3-84d7-0fd8a571f31e
+AZURE_MYSQL_RESOURCE_GROUP="jewelry-auction"
+AZURE_MYSQL_URL="jdbc:mysql://fuja-db.mysql.database.azure.com:3306/jewelryauction?serverTimezone=UTC&useSSL=true&requireSSL=false"
+AZURE_MYSQL_SUBSCRIPTION_ID="6707633a-09f0-4707-beb8-a7b8f25f5574"
+AZURE_MYSQL_PASSWORD="Team6swp"
+AZURE_MYSQL_USERNAME="root_fuja"
+
